reference/v5/README.md
#  PowerShell V5.0 Reference

| Module Reference | Cmdlets  |  
| - | - |  
| [About](About/About.md) | [about_ActivityCommonParameters](About/about_ActivityCommonParameters.md), [about_Aliases](About/about_Aliases.md), [about_Arithmetic_Operators](About/about_Arithmetic_Operators.md), [about_Arrays](About/about_Arrays.md), [about_Assignment_Operators](About/about_Assignment_Operators.md), [about_Automatic_Variables](About/about_Automatic_Variables.md), [about_Break](About/about_Break.md), [about_Checkpoint-Workflow](About/about_Checkpoint-Workflow.md), [about_Classes](About/about_Classes.md), [about_Command_Precedence](About/about_Command_Precedence.md), [about_Command_Syntax](About/about_Command_Syntax.md), [about_Comment_Based_Help](About/about_Comment_Based_Help.md), [about_CommonParameters](About/about_CommonParameters.md), [about_Comparison_Oper](About/about_Comparison_Oper.md), [about_Comparison_Operators](About/about_Comparison_Operators.md), [about_Continue](About/about_Continue.md), [about_Core_Commands](About/about_Core_Commands.md), [about_Data_Sections](About/about_Data_Sections.md), [about_Debuggers](About/about_Debuggers.md), [about_DesiredStateConfiguration](About/about_DesiredStateConfiguration.md), [about_Do](About/about_Do.md), [about_DSCLogResource](About/about_DSCLogResource.md), [about_Environment_Variables](About/about_Environment_Variables.md), [about_Escape_Characte](About/about_Escape_Characte.md), [about_Escape_Characters](About/about_Escape_Characters.md), [about_Eventlogs](About/about_Eventlogs.md), [about_Execution_Polic](About/about_Execution_Polic.md), [about_Execution_Policies](About/about_Execution_Policies.md), [about_For](About/about_For.md), [about_Foreach](About/about_Foreach.md), [about_Foreach-Parallel](About/about_Foreach-Parallel.md), [about_Format.ps1xml](About/about_Format.ps1xml.md), [about_Functions](About/about_Functions.md), [about_Functions_Adv_M](About/about_Functions_Adv_M.md), [about_Functions_Adv_P](About/about_Functions_Adv_P.md), [about_Functions_Advanced](About/about_Functions_Advanced.md), [about_Functions_Advanced_Methods](About/about_Functions_Advanced_Methods.md), [about_Functions_Advanced_Parameters](About/about_Functions_Advanced_Parameters.md), [about_Functions_Cmdle](About/about_Functions_Cmdle.md), [about_Functions_CmdletBindingAttribute](About/about_Functions_CmdletBindingAttribute.md), [about_Functions_Outpu](About/about_Functions_Outpu.md), [about_Functions_OutputTypeAttribute](About/about_Functions_OutputTypeAttribute.md), [about_GP_Settings](About/about_GP_Settings.md), [about_Group_Policy_Settings](About/about_Group_Policy_Settings.md), [about_Hash_Tables](About/about_Hash_Tables.md), [about_Hidden](About/about_Hidden.md), [about_History](About/about_History.md), [about_If](About/about_If.md), [about_InlineScript](About/about_InlineScript.md), [about_Job_Details](About/about_Job_Details.md), [about_Jobs](About/about_Jobs.md), [about_Join](About/about_Join.md), [about_Language_Keywords](About/about_Language_Keywords.md), [about_Language_Modes](About/about_Language_Modes.md), [about_Line_Editing](About/about_Line_Editing.md), [about_Locations](About/about_Locations.md), [about_Logical_Operators](About/about_Logical_Operators.md), [about_Methods](About/about_Methods.md), [about_Modules](About/about_Modules.md), [about_Object_Creation](About/about_Object_Creation.md), [about_Objects](About/about_Objects.md), [about_Operator_Precedence](About/about_Operator_Precedence.md), [about_Operators](About/about_Operators.md), [about_PackageManagement](About/about_PackageManagement.md), [about_Parallel](About/about_Parallel.md), [about_Parameters](About/about_Parameters.md), [about_Parameters_Default_Values](About/about_Parameters_Default_Values.md), [about_Parsing](About/about_Parsing.md), [about_Path_Syntax](About/about_Path_Syntax.md), [about_pipelines](About/about_pipelines.md), [about_PowerShell.exe](About/about_PowerShell.exe.md), [about_PowerShell_Ise.exe](About/about_PowerShell_Ise.exe.md), [about_Preference_Variables](About/about_Preference_Variables.md), [about_Profiles](About/about_Profiles.md), [about_Prompts](About/about_Prompts.md), [about_Properties](About/about_Properties.md), [about_Providers](About/about_Providers.md), [about_Providers_deleted](About/about_Providers_deleted.md), [about_PSConsoleHostReadLine](About/about_PSConsoleHostReadLine.md), [about_PSReadline](About/about_PSReadline.md), [about_PSSession_Details](About/about_PSSession_Details.md), [about_PSSessions](About/about_PSSessions.md), [about_PSSnapins](About/about_PSSnapins.md), [about_Quoting_Rules](About/about_Quoting_Rules.md), [about_Redirection](About/about_Redirection.md), [about_Ref](About/about_Ref.md), [about_Regular_Express](About/about_Regular_Express.md), [about_Regular_Expressions](About/about_Regular_Expressions.md), [about_Remote](About/about_Remote.md), [about_Remote_Disconn](About/about_Remote_Disconn.md), [about_Remote_Disconnected_Sessions](About/about_Remote_Disconnected_Sessions.md), [about_Remote_FAQ](About/about_Remote_FAQ.md), [about_Remote_Jobs](About/about_Remote_Jobs.md), [about_Remote_Output](About/about_Remote_Output.md), [about_Remote_Requirem](About/about_Remote_Requirem.md), [about_Remote_Requirements](About/about_Remote_Requirements.md), [about_Remote_Troubleshooting](About/about_Remote_Troubleshooting.md), [about_Remote_Variable](About/about_Remote_Variable.md), [about_Remote_Variables](About/about_Remote_Variables.md), [about_Requires](About/about_Requires.md), [about_Reserved_Words](About/about_Reserved_Words.md), [about_Return](About/about_Return.md), [about_Run_With_PowerShell](About/about_Run_With_PowerShell.md), [about_Run_With_PShell](About/about_Run_With_PShell.md), [about_SchedJobs_TS](About/about_SchedJobs_TS.md), [about_Scheduled_Jobs](About/about_Scheduled_Jobs.md), [about_Scheduled_Jobs_Advanced](About/about_Scheduled_Jobs_Advanced.md), [about_Scheduled_Jobs_Basics](About/about_Scheduled_Jobs_Basics.md), [about_Scheduled_Jobs_Troubleshooting](About/about_Scheduled_Jobs_Troubleshooting.md), [about_Scopes](About/about_Scopes.md), [about_Script_Blocks](About/about_Script_Blocks.md), [about_Script_Internat](About/about_Script_Internat.md), [about_Script_Internationalization](About/about_Script_Internationalization.md), [about_Scripts](About/about_Scripts.md), [about_Sequence](About/about_Sequence.md), [about_SesConfig_Files](About/about_SesConfig_Files.md), [about_Session_Configuration_Files](About/about_Session_Configuration_Files.md), [about_Session_Configurations](About/about_Session_Configurations.md), [about_Signing](About/about_Signing.md), [about_Signing_deleted](About/about_Signing_deleted.md), [about_Simplified_Syntax](About/about_Simplified_Syntax.md), [about_Special_Characters](About/about_Special_Characters.md), [about_Splatting](About/about_Splatting.md), [about_Split](About/about_Split.md), [about_Suspend-Workflow](About/about_Suspend-Workflow.md), [about_Switch](About/about_Switch.md), [about_Throw](About/about_Throw.md), [about_Transactions](About/about_Transactions.md), [about_Transactions_deleted](About/about_Transactions_deleted.md), [about_Trap](About/about_Trap.md), [about_Try_Catch_Finally](About/about_Try_Catch_Finally.md), [about_Type_Accelerators](About/about_Type_Accelerators.md), [about_Type_Operators](About/about_Type_Operators.md), [about_Types.ps1xml](About/about_Types.ps1xml.md), [about_Updatable_Help](About/about_Updatable_Help.md), [about_Variables](About/about_Variables.md), [about_WFActivityComP](About/about_WFActivityComP.md), [about_WFSequence](About/about_WFSequence.md), [about_While](About/about_While.md), [about_Wildcards](About/about_Wildcards.md), [about_Windows_PowerShell_5.0](About/about_Windows_PowerShell_5.0.md), [about_Windows_PowerShell_ISE](About/about_Windows_PowerShell_ISE.md), [about_Windows_RT](About/about_Windows_RT.md), [about_WMI](About/about_WMI.md), [about_WMI_Cmdlets](About/about_WMI_Cmdlets.md), [about_WorkflowCommonParameters](About/about_WorkflowCommonParameters.md), [about_Workflows](About/about_Workflows.md), [about_WQL](About/about_WQL.md), [about_WS-Management_Cmdlets](About/about_WS-Management_Cmdlets.md), [Add-Content-for-FileSystem](About/Add-Content-for-FileSystem.md), [Alias-Provider](About/Alias-Provider.md), [Certificate-Provider](About/Certificate-Provider.md), [Clear-Content-for-FileSystem](About/Clear-Content-for-FileSystem.md), [Clear-Host](About/Clear-Host.md), [default](About/default.md), [Environment-Provider](About/Environment-Provider.md), [FileSystem-Provider](About/FileSystem-Provider.md), [Function-Provider](About/Function-Provider.md), [Get-ChildItem-for-Certificate](About/Get-ChildItem-for-Certificate.md), [Get-ChildItem-for-FileSystem](About/Get-ChildItem-for-FileSystem.md), [Get-Content-for-FileSystem](About/Get-Content-for-FileSystem.md), [Get-Item-for-FileSystem](About/Get-Item-for-FileSystem.md), [Get-Verb](About/Get-Verb.md), [Move-Item-for-Certificate](About/Move-Item-for-Certificate.md), [New-Item-for-Certificate](About/New-Item-for-Certificate.md), [New-Item-for-ClientCertificate](About/New-Item-for-ClientCertificate.md), [New-Item-for-InitializationParameters](About/New-Item-for-InitializationParameters.md), [New-Item-for-Listener](About/New-Item-for-Listener.md), [New-Item-for-Plugin](About/New-Item-for-Plugin.md), [New-Item-for-Resources](About/New-Item-for-Resources.md), [New-Item-for-Security](About/New-Item-for-Security.md), [Registry-Provider](About/Registry-Provider.md), [Remove-Item-for-Certificate](About/Remove-Item-for-Certificate.md), [Remove-Item-for-FileSystem](About/Remove-Item-for-FileSystem.md), [Set-Content-for-FileSystem](About/Set-Content-for-FileSystem.md), [Test-Path-for-FileSystem](About/Test-Path-for-FileSystem.md), [Variable-Provider](About/Variable-Provider.md), [WSMan-Provider](About/WSMan-Provider.md) |  
| [ISE](ISE/ISE.md) | [Get-IseSnippet](ISE/Get-IseSnippet.md), [Import-IseSnippet](ISE/Import-IseSnippet.md), [New-IseSnippet](ISE/New-IseSnippet.md) |  
| [Microsoft.PowerShell.Archive](Microsoft.PowerShell.Archive/Microsoft.PowerShell.Archive.md) | [Compress-Archive](Microsoft.PowerShell.Archive/Compress-Archive.md), [Expand-Archive](Microsoft.PowerShell.Archive/Expand-Archive.md) |
| [Microsoft.PowerShell.Core](Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md) | [Add-History](Microsoft.PowerShell.Core/Add-History.md), [Add-PSSnapin](Microsoft.PowerShell.Core/Add-PSSnapin.md), [Clear-History](Microsoft.PowerShell.Core/Clear-History.md), [Connect-PSSession](Microsoft.PowerShell.Core/Connect-PSSession.md), [Debug-Job](Microsoft.PowerShell.Core/Debug-Job.md), [Disable-PSRemoting](Microsoft.PowerShell.Core/Disable-PSRemoting.md), [Disable-PSSessionConfiguration](Microsoft.PowerShell.Core/Disable-PSSessionConfiguration.md), [Disconnect-PSSession](Microsoft.PowerShell.Core/Disconnect-PSSession.md), [Enable-PSRemoting](Microsoft.PowerShell.Core/Enable-PSRemoting.md), [Enable-PSSessionConfiguration](Microsoft.PowerShell.Core/Enable-PSSessionConfiguration.md), [Enter-PSHostProcess](Microsoft.PowerShell.Core/Enter-PSHostProcess.md), [Enter-PSSession](Microsoft.PowerShell.Core/Enter-PSSession.md), [Exit-PSHostProcess](Microsoft.PowerShell.Core/Exit-PSHostProcess.md), [Exit-PSSession](Microsoft.PowerShell.Core/Exit-PSSession.md), [Export-Console](Microsoft.PowerShell.Core/Export-Console.md), [Export-ModuleMember](Microsoft.PowerShell.Core/Export-ModuleMember.md), [ForEach-Object](Microsoft.PowerShell.Core/ForEach-Object.md), [Get-Command](Microsoft.PowerShell.Core/Get-Command.md), [Get-Help](Microsoft.PowerShell.Core/Get-Help.md), [Get-History](Microsoft.PowerShell.Core/Get-History.md), [Get-Job](Microsoft.PowerShell.Core/Get-Job.md), [Get-Module](Microsoft.PowerShell.Core/Get-Module.md), [Get-PSHostProcessInfo](Microsoft.PowerShell.Core/Get-PSHostProcessInfo.md), [Get-PSSession](Microsoft.PowerShell.Core/Get-PSSession.md), [Get-PSSessionCapability](Microsoft.PowerShell.Core/Get-PSSessionCapability.md), [Get-PSSessionConfiguration](Microsoft.PowerShell.Core/Get-PSSessionConfiguration.md), [Get-PSSnapin](Microsoft.PowerShell.Core/Get-PSSnapin.md), [Import-Module](Microsoft.PowerShell.Core/Import-Module.md), [Invoke-Command](Microsoft.PowerShell.Core/Invoke-Command.md), [Invoke-History](Microsoft.PowerShell.Core/Invoke-History.md), [New-Module](Microsoft.PowerShell.Core/New-Module.md), [New-ModuleManifest](Microsoft.PowerShell.Core/New-ModuleManifest.md), [New-PSRoleCapabilityFile](Microsoft.PowerShell.Core/New-PSRoleCapabilityFile.md), [New-PSSession](Microsoft.PowerShell.Core/New-PSSession.md), [New-PSSessionConfigurationFile](Microsoft.PowerShell.Core/New-PSSessionConfigurationFile.md), [New-PSSessionOption](Microsoft.PowerShell.Core/New-PSSessionOption.md), [New-PSTransportOption](Microsoft.PowerShell.Core/New-PSTransportOption.md), [Out-Default](Microsoft.PowerShell.Core/Out-Default.md), [Out-Host](Microsoft.PowerShell.Core/Out-Host.md), [Out-Null](Microsoft.PowerShell.Core/Out-Null.md), [Receive-Job](Microsoft.PowerShell.Core/Receive-Job.md), [Receive-PSSession](Microsoft.PowerShell.Core/Receive-PSSession.md), [Register-ArgumentCompleter](Microsoft.PowerShell.Core/Register-ArgumentCompleter.md), [Register-PSSessionConfiguration](Microsoft.PowerShell.Core/Register-PSSessionConfiguration.md), [Remove-Job](Microsoft.PowerShell.Core/Remove-Job.md), [Remove-Module](Microsoft.PowerShell.Core/Remove-Module.md), [Remove-PSSession](Microsoft.PowerShell.Core/Remove-PSSession.md), [Remove-PSSnapin](Microsoft.PowerShell.Core/Remove-PSSnapin.md), [Resume-Job](Microsoft.PowerShell.Core/Resume-Job.md), [Save-Help](Microsoft.PowerShell.Core/Save-Help.md), [Set-PSDebug](Microsoft.PowerShell.Core/Set-PSDebug.md), [Set-PSSessionConfiguration](Microsoft.PowerShell.Core/Set-PSSessionConfiguration.md), [Set-StrictMode](Microsoft.PowerShell.Core/Set-StrictMode.md), [Start-Job](Microsoft.PowerShell.Core/Start-Job.md), [Stop-Job](Microsoft.PowerShell.Core/Stop-Job.md), [Suspend-Job](Microsoft.PowerShell.Core/Suspend-Job.md), [Test-ModuleManifest](Microsoft.PowerShell.Core/Test-ModuleManifest.md), [Test-PSSessionConfigurationFile](Microsoft.PowerShell.Core/Test-PSSessionConfigurationFile.md), [Unregister-PSSessionConfiguration](Microsoft.PowerShell.Core/Unregister-PSSessionConfiguration.md), [Update-Help](Microsoft.PowerShell.Core/Update-Help.md), [Wait-Job](Microsoft.PowerShell.Core/Wait-Job.md), [Where-Object](Microsoft.PowerShell.Core/Where-Object.md) |
| [Microsoft.PowerShell.Diagnostics](Microsoft.PowerShell.Diagnostics/Microsoft.PowerShell.Diagnostics.md) | [Export-Counter](Microsoft.PowerShell.Diagnostics/Export-Counter.md), [Get-Counter](Microsoft.PowerShell.Diagnostics/Get-Counter.md), [Get-WinEvent](Microsoft.PowerShell.Diagnostics/Get-WinEvent.md), [Import-Counter](Microsoft.PowerShell.Diagnostics/Import-Counter.md), [New-WinEvent](Microsoft.PowerShell.Diagnostics/New-WinEvent.md) |
| [Microsoft.PowerShell.Host](Microsoft.PowerShell.Host/Microsoft.PowerShell.Host.md) | [Start-Transcript](Microsoft.PowerShell.Host/Start-Transcript.md), [Stop-Transcript](Microsoft.PowerShell.Host/Stop-Transcript.md) |
| [Microsoft.PowerShell.Management](Microsoft.PowerShell.Management/Microsoft.PowerShell.Management.md) | [Add-Computer](Microsoft.PowerShell.Management/Add-Computer.md), [Add-Content](Microsoft.PowerShell.Management/Add-Content.md), [Checkpoint-Computer](Microsoft.PowerShell.Management/Checkpoint-Computer.md), [Clear-Content](Microsoft.PowerShell.Management/Clear-Content.md), [Clear-EventLog](Microsoft.PowerShell.Management/Clear-EventLog.md), [Clear-Item](Microsoft.PowerShell.Management/Clear-Item.md), [Clear-ItemProperty](Microsoft.PowerShell.Management/Clear-ItemProperty.md), [Clear-RecycleBin](Microsoft.PowerShell.Management/Clear-RecycleBin.md), [Complete-Transaction](Microsoft.PowerShell.Management/Complete-Transaction.md), [Convert-Path](Microsoft.PowerShell.Management/Convert-Path.md), [Copy-Item](Microsoft.PowerShell.Management/Copy-Item.md), [Copy-ItemProperty](Microsoft.PowerShell.Management/Copy-ItemProperty.md), [Debug-Process](Microsoft.PowerShell.Management/Debug-Process.md), [Disable-ComputerRestore](Microsoft.PowerShell.Management/Disable-ComputerRestore.md), [Enable-ComputerRestore](Microsoft.PowerShell.Management/Enable-ComputerRestore.md), [Get-ChildItem](Microsoft.PowerShell.Management/Get-ChildItem.md), [Get-Clipboard](Microsoft.PowerShell.Management/Get-Clipboard.md), [Get-ComputerRestorePoint](Microsoft.PowerShell.Management/Get-ComputerRestorePoint.md), [Get-Content](Microsoft.PowerShell.Management/Get-Content.md), [Get-ControlPanelItem](Microsoft.PowerShell.Management/Get-ControlPanelItem.md), [Get-EventLog](Microsoft.PowerShell.Management/Get-EventLog.md), [Get-HotFix](Microsoft.PowerShell.Management/Get-HotFix.md), [Get-Item](Microsoft.PowerShell.Management/Get-Item.md), [Get-ItemProperty](Microsoft.PowerShell.Management/Get-ItemProperty.md), [Get-ItemPropertyValue](Microsoft.PowerShell.Management/Get-ItemPropertyValue.md), [Get-Location](Microsoft.PowerShell.Management/Get-Location.md), [Get-Process](Microsoft.PowerShell.Management/Get-Process.md), [Get-PSDrive](Microsoft.PowerShell.Management/Get-PSDrive.md), [Get-PSProvider](Microsoft.PowerShell.Management/Get-PSProvider.md), [Get-Service](Microsoft.PowerShell.Management/Get-Service.md), [Get-Transaction](Microsoft.PowerShell.Management/Get-Transaction.md), [Get-WmiObject](Microsoft.PowerShell.Management/Get-WmiObject.md), [Invoke-Item](Microsoft.PowerShell.Management/Invoke-Item.md), [Invoke-WmiMethod](Microsoft.PowerShell.Management/Invoke-WmiMethod.md), [Join-Path](Microsoft.PowerShell.Management/Join-Path.md), [Limit-EventLog](Microsoft.PowerShell.Management/Limit-EventLog.md), [Move-Item](Microsoft.PowerShell.Management/Move-Item.md), [Move-ItemProperty](Microsoft.PowerShell.Management/Move-ItemProperty.md), [New-EventLog](Microsoft.PowerShell.Management/New-EventLog.md), [New-Item](Microsoft.PowerShell.Management/New-Item.md), [New-ItemProperty](Microsoft.PowerShell.Management/New-ItemProperty.md), [New-PSDrive](Microsoft.PowerShell.Management/New-PSDrive.md), [New-Service](Microsoft.PowerShell.Management/New-Service.md), [New-WebServiceProxy](Microsoft.PowerShell.Management/New-WebServiceProxy.md), [Pop-Location](Microsoft.PowerShell.Management/Pop-Location.md), [Push-Location](Microsoft.PowerShell.Management/Push-Location.md), [Register-WmiEvent](Microsoft.PowerShell.Management/Register-WmiEvent.md), [Remove-Computer](Microsoft.PowerShell.Management/Remove-Computer.md), [Remove-EventLog](Microsoft.PowerShell.Management/Remove-EventLog.md), [Remove-Item](Microsoft.PowerShell.Management/Remove-Item.md), [Remove-ItemProperty](Microsoft.PowerShell.Management/Remove-ItemProperty.md), [Remove-PSDrive](Microsoft.PowerShell.Management/Remove-PSDrive.md), [Remove-WmiObject](Microsoft.PowerShell.Management/Remove-WmiObject.md), [Rename-Computer](Microsoft.PowerShell.Management/Rename-Computer.md), [Rename-Item](Microsoft.PowerShell.Management/Rename-Item.md), [Rename-ItemProperty](Microsoft.PowerShell.Management/Rename-ItemProperty.md), [Reset-ComputerMachinePassword](Microsoft.PowerShell.Management/Reset-ComputerMachinePassword.md), [Resolve-Path](Microsoft.PowerShell.Management/Resolve-Path.md), [Restart-Computer](Microsoft.PowerShell.Management/Restart-Computer.md), [Restart-Service](Microsoft.PowerShell.Management/Restart-Service.md), [Restore-Computer](Microsoft.PowerShell.Management/Restore-Computer.md), [Resume-Service](Microsoft.PowerShell.Management/Resume-Service.md), [Set-Clipboard](Microsoft.PowerShell.Management/Set-Clipboard.md), [Set-Content](Microsoft.PowerShell.Management/Set-Content.md), [Set-Item](Microsoft.PowerShell.Management/Set-Item.md), [Set-ItemProperty](Microsoft.PowerShell.Management/Set-ItemProperty.md), [Set-Location](Microsoft.PowerShell.Management/Set-Location.md), [Set-Service](Microsoft.PowerShell.Management/Set-Service.md), [Set-WmiInstance](Microsoft.PowerShell.Management/Set-WmiInstance.md), [Show-ControlPanelItem](Microsoft.PowerShell.Management/Show-ControlPanelItem.md), [Show-EventLog](Microsoft.PowerShell.Management/Show-EventLog.md), [Split-Path](Microsoft.PowerShell.Management/Split-Path.md), [Start-Process](Microsoft.PowerShell.Management/Start-Process.md), [Start-Service](Microsoft.PowerShell.Management/Start-Service.md), [Start-Transaction](Microsoft.PowerShell.Management/Start-Transaction.md), [Stop-Computer](Microsoft.PowerShell.Management/Stop-Computer.md), [Stop-Process](Microsoft.PowerShell.Management/Stop-Process.md), [Stop-Service](Microsoft.PowerShell.Management/Stop-Service.md), [Suspend-Service](Microsoft.PowerShell.Management/Suspend-Service.md), [Test-ComputerSecureChannel](Microsoft.PowerShell.Management/Test-ComputerSecureChannel.md), [Test-Connection](Microsoft.PowerShell.Management/Test-Connection.md), [Test-Path](Microsoft.PowerShell.Management/Test-Path.md), [Undo-Transaction](Microsoft.PowerShell.Management/Undo-Transaction.md), [Use-Transaction](Microsoft.PowerShell.Management/Use-Transaction.md), [Wait-Process](Microsoft.PowerShell.Management/Wait-Process.md), [Write-EventLog](Microsoft.PowerShell.Management/Write-EventLog.md) |
| [Microsoft.PowerShell.Security](Microsoft.PowerShell.Security/Microsoft.PowerShell.Security.md) | [ConvertFrom-SecureString](Microsoft.PowerShell.Security/ConvertFrom-SecureString.md), [ConvertTo-SecureString](Microsoft.PowerShell.Security/ConvertTo-SecureString.md), [Get-Acl](Microsoft.PowerShell.Security/Get-Acl.md), [Get-AuthenticodeSignature](Microsoft.PowerShell.Security/Get-AuthenticodeSignature.md), [Get-CmsMessage](Microsoft.PowerShell.Security/Get-CmsMessage.md), [Get-Credential](Microsoft.PowerShell.Security/Get-Credential.md), [Get-ExecutionPolicy](Microsoft.PowerShell.Security/Get-ExecutionPolicy.md), [Get-PfxCertificate](Microsoft.PowerShell.Security/Get-PfxCertificate.md), [Protect-CmsMessage](Microsoft.PowerShell.Security/Protect-CmsMessage.md), [Set-Acl](Microsoft.PowerShell.Security/Set-Acl.md), [Set-AuthenticodeSignature](Microsoft.PowerShell.Security/Set-AuthenticodeSignature.md), [Set-ExecutionPolicy](Microsoft.PowerShell.Security/Set-ExecutionPolicy.md), [Unprotect-CmsMessage](Microsoft.PowerShell.Security/Unprotect-CmsMessage.md) |
| [Microsoft.PowerShell.Utility](Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md) | [Add-Member](Microsoft.PowerShell.Utility/Add-Member.md), [Add-Type](Microsoft.PowerShell.Utility/Add-Type.md), [Clear-Variable](Microsoft.PowerShell.Utility/Clear-Variable.md), [Compare-Object](Microsoft.PowerShell.Utility/Compare-Object.md), [ConvertFrom-Csv](Microsoft.PowerShell.Utility/ConvertFrom-Csv.md), [ConvertFrom-Json](Microsoft.PowerShell.Utility/ConvertFrom-Json.md), [ConvertFrom-SddlString](Microsoft.PowerShell.Utility/ConvertFrom-SddlString.md), [ConvertFrom-String](Microsoft.PowerShell.Utility/ConvertFrom-String.md), [ConvertFrom-StringData](Microsoft.PowerShell.Utility/ConvertFrom-StringData.md), [Convert-String](Microsoft.PowerShell.Utility/Convert-String.md), [ConvertTo-Csv](Microsoft.PowerShell.Utility/ConvertTo-Csv.md), [ConvertTo-Html](Microsoft.PowerShell.Utility/ConvertTo-Html.md), [ConvertTo-Json](Microsoft.PowerShell.Utility/ConvertTo-Json.md), [ConvertTo-Xml](Microsoft.PowerShell.Utility/ConvertTo-Xml.md), [Debug-Runspace](Microsoft.PowerShell.Utility/Debug-Runspace.md), [Disable-PSBreakpoint](Microsoft.PowerShell.Utility/Disable-PSBreakpoint.md), [Disable-RunspaceDebug](Microsoft.PowerShell.Utility/Disable-RunspaceDebug.md), [Enable-PSBreakpoint](Microsoft.PowerShell.Utility/Enable-PSBreakpoint.md), [Enable-RunspaceDebug](Microsoft.PowerShell.Utility/Enable-RunspaceDebug.md), [Export-Alias](Microsoft.PowerShell.Utility/Export-Alias.md), [Export-Clixml](Microsoft.PowerShell.Utility/Export-Clixml.md), [Export-Csv](Microsoft.PowerShell.Utility/Export-Csv.md), [Export-FormatData](Microsoft.PowerShell.Utility/Export-FormatData.md), [Export-PSSession](Microsoft.PowerShell.Utility/Export-PSSession.md), [Format-Custom](Microsoft.PowerShell.Utility/Format-Custom.md), [Format-Hex](Microsoft.PowerShell.Utility/Format-Hex.md), [Format-List](Microsoft.PowerShell.Utility/Format-List.md), [Format-Table](Microsoft.PowerShell.Utility/Format-Table.md), [Format-Wide](Microsoft.PowerShell.Utility/Format-Wide.md), [Get-Alias](Microsoft.PowerShell.Utility/Get-Alias.md), [Get-Culture](Microsoft.PowerShell.Utility/Get-Culture.md), [Get-Date](Microsoft.PowerShell.Utility/Get-Date.md), [Get-Event](Microsoft.PowerShell.Utility/Get-Event.md), [Get-EventSubscriber](Microsoft.PowerShell.Utility/Get-EventSubscriber.md), [Get-FileHash](Microsoft.PowerShell.Utility/Get-FileHash.md), [Get-FormatData](Microsoft.PowerShell.Utility/Get-FormatData.md), [Get-Host](Microsoft.PowerShell.Utility/Get-Host.md), [Get-Member](Microsoft.PowerShell.Utility/Get-Member.md), [Get-PSBreakpoint](Microsoft.PowerShell.Utility/Get-PSBreakpoint.md), [Get-PSCallStack](Microsoft.PowerShell.Utility/Get-PSCallStack.md), [Get-Random](Microsoft.PowerShell.Utility/Get-Random.md), [Get-Runspace](Microsoft.PowerShell.Utility/Get-Runspace.md), [Get-RunspaceDebug](Microsoft.PowerShell.Utility/Get-RunspaceDebug.md), [Get-TraceSource](Microsoft.PowerShell.Utility/Get-TraceSource.md), [Get-TypeData](Microsoft.PowerShell.Utility/Get-TypeData.md), [Get-UICulture](Microsoft.PowerShell.Utility/Get-UICulture.md), [Get-Unique](Microsoft.PowerShell.Utility/Get-Unique.md), [Get-Variable](Microsoft.PowerShell.Utility/Get-Variable.md), [Group-Object](Microsoft.PowerShell.Utility/Group-Object.md), [Import-Alias](Microsoft.PowerShell.Utility/Import-Alias.md), [Import-Clixml](Microsoft.PowerShell.Utility/Import-Clixml.md), [Import-Csv](Microsoft.PowerShell.Utility/Import-Csv.md), [Import-LocalizedData](Microsoft.PowerShell.Utility/Import-LocalizedData.md), [Import-PowerShellDataFile](Microsoft.PowerShell.Utility/Import-PowerShellDataFile.md), [Import-PSSession](Microsoft.PowerShell.Utility/Import-PSSession.md), [Invoke-Expression](Microsoft.PowerShell.Utility/Invoke-Expression.md), [Invoke-RestMethod](Microsoft.PowerShell.Utility/Invoke-RestMethod.md), [Invoke-WebRequest](Microsoft.PowerShell.Utility/Invoke-WebRequest.md), [Measure-Command](Microsoft.PowerShell.Utility/Measure-Command.md), [Measure-Object](Microsoft.PowerShell.Utility/Measure-Object.md), [New-Alias](Microsoft.PowerShell.Utility/New-Alias.md), [New-Event](Microsoft.PowerShell.Utility/New-Event.md), [New-Guid](Microsoft.PowerShell.Utility/New-Guid.md), [New-Object](Microsoft.PowerShell.Utility/New-Object.md), [New-TemporaryFile](Microsoft.PowerShell.Utility/New-TemporaryFile.md), [New-TimeSpan](Microsoft.PowerShell.Utility/New-TimeSpan.md), [New-Variable](Microsoft.PowerShell.Utility/New-Variable.md), [Out-File](Microsoft.PowerShell.Utility/Out-File.md), [Out-GridView](Microsoft.PowerShell.Utility/Out-GridView.md), [Out-Printer](Microsoft.PowerShell.Utility/Out-Printer.md), [Out-String](Microsoft.PowerShell.Utility/Out-String.md), [Read-Host](Microsoft.PowerShell.Utility/Read-Host.md), [Register-EngineEvent](Microsoft.PowerShell.Utility/Register-EngineEvent.md), [Register-ObjectEvent](Microsoft.PowerShell.Utility/Register-ObjectEvent.md), [Remove-Event](Microsoft.PowerShell.Utility/Remove-Event.md), [Remove-PSBreakpoint](Microsoft.PowerShell.Utility/Remove-PSBreakpoint.md), [Remove-TypeData](Microsoft.PowerShell.Utility/Remove-TypeData.md), [Remove-Variable](Microsoft.PowerShell.Utility/Remove-Variable.md), [Select-Object](Microsoft.PowerShell.Utility/Select-Object.md), [Select-String](Microsoft.PowerShell.Utility/Select-String.md), [Select-Xml](Microsoft.PowerShell.Utility/Select-Xml.md), [Send-MailMessage](Microsoft.PowerShell.Utility/Send-MailMessage.md), [Set-Alias](Microsoft.PowerShell.Utility/Set-Alias.md), [Set-Date](Microsoft.PowerShell.Utility/Set-Date.md), [Set-PSBreakpoint](Microsoft.PowerShell.Utility/Set-PSBreakpoint.md), [Set-TraceSource](Microsoft.PowerShell.Utility/Set-TraceSource.md), [Set-Variable](Microsoft.PowerShell.Utility/Set-Variable.md), [Show-Command](Microsoft.PowerShell.Utility/Show-Command.md), [Sort-Object](Microsoft.PowerShell.Utility/Sort-Object.md), [Start-Sleep](Microsoft.PowerShell.Utility/Start-Sleep.md), [Tee-Object](Microsoft.PowerShell.Utility/Tee-Object.md), [Trace-Command](Microsoft.PowerShell.Utility/Trace-Command.md), [Unblock-File](Microsoft.PowerShell.Utility/Unblock-File.md), [Unregister-Event](Microsoft.PowerShell.Utility/Unregister-Event.md), [Update-FormatData](Microsoft.PowerShell.Utility/Update-FormatData.md), [Update-List](Microsoft.PowerShell.Utility/Update-List.md), [Update-TypeData](Microsoft.PowerShell.Utility/Update-TypeData.md), [Wait-Debugger](Microsoft.PowerShell.Utility/Wait-Debugger.md), [Wait-Event](Microsoft.PowerShell.Utility/Wait-Event.md), [Write-Debug](Microsoft.PowerShell.Utility/Write-Debug.md), [Write-Error](Microsoft.PowerShell.Utility/Write-Error.md), [Write-Host](Microsoft.PowerShell.Utility/Write-Host.md), [Write-Information](Microsoft.PowerShell.Utility/Write-Information.md), [Write-Output](Microsoft.PowerShell.Utility/Write-Output.md), [Write-Progress](Microsoft.PowerShell.Utility/Write-Progress.md), [Write-Verbose](Microsoft.PowerShell.Utility/Write-Verbose.md), [Write-Warning](Microsoft.PowerShell.Utility/Write-Warning.md) |
| [Microsoft.WsMan.Management](Microsoft.WsMan.Management/Microsoft.WsMan.Management.md) | [Connect-WSMan](Microsoft.WsMan.Management/Connect-WSMan.md), [Disable-WSManCredSSP](Microsoft.WsMan.Management/Disable-WSManCredSSP.md), [Disconnect-WSMan](Microsoft.WsMan.Management/Disconnect-WSMan.md), [Enable-WSManCredSSP](Microsoft.WsMan.Management/Enable-WSManCredSSP.md), [Get-WSManCredSSP](Microsoft.WsMan.Management/Get-WSManCredSSP.md), [Get-WSManInstance](Microsoft.WsMan.Management/Get-WSManInstance.md), [Invoke-WSManAction](Microsoft.WsMan.Management/Invoke-WSManAction.md), [New-WSManInstance](Microsoft.WsMan.Management/New-WSManInstance.md), [New-WSManSessionOption](Microsoft.WsMan.Management/New-WSManSessionOption.md), [Remove-WSManInstance](Microsoft.WsMan.Management/Remove-WSManInstance.md), [Set-WSManInstance](Microsoft.WsMan.Management/Set-WSManInstance.md), [Set-WSManQuickConfig](Microsoft.WsMan.Management/Set-WSManQuickConfig.md), [Test-WSMan](Microsoft.WsMan.Management/Test-WSMan.md) |
| [PackageManagement](PackageManagement/PackageManagement.md) | [Find-Package](PackageManagement/Find-Package.md), [Find-PackageProvider](PackageManagement/Find-PackageProvider.md), [Get-Package](PackageManagement/Get-Package.md), [Get-PackageProvider](PackageManagement/Get-PackageProvider.md), [Get-PackageSource](PackageManagement/Get-PackageSource.md), [Import-PackageProvider](PackageManagement/Import-PackageProvider.md), [Install-Package](PackageManagement/Install-Package.md), [Install-PackageProvider](PackageManagement/Install-PackageProvider.md), [Register-PackageSource](PackageManagement/Register-PackageSource.md), [Save-Package](PackageManagement/Save-Package.md), [Set-PackageSource](PackageManagement/Set-PackageSource.md), [Uninstall-Package](PackageManagement/Uninstall-Package.md), [Unregister-PackageSource](PackageManagement/Unregister-PackageSource.md) |
| [PowershellGet](PowershellGet/PowershellGet.md) | [Find-DscResource](PowershellGet/Find-DscResource.md), [Find-Module](PowershellGet/Find-Module.md), [Find-Script](PowershellGet/Find-Script.md), [Get-InstalledModule](PowershellGet/Get-InstalledModule.md), [Get-InstalledScript](PowershellGet/Get-InstalledScript.md), [Get-PSRepository](PowershellGet/Get-PSRepository.md), [Install-Module](PowershellGet/Install-Module.md), [Install-Script](PowershellGet/Install-Script.md), [New-ScriptFileInfo](PowershellGet/New-ScriptFileInfo.md), [Publish-Module](PowershellGet/Publish-Module.md), [Publish-Script](PowershellGet/Publish-Script.md), [Register-PSRepository](PowershellGet/Register-PSRepository.md), [Save-Module](PowershellGet/Save-Module.md), [Save-Script](PowershellGet/Save-Script.md), [Set-PSRepository](PowershellGet/Set-PSRepository.md), [Test-ScriptFileInfo](PowershellGet/Test-ScriptFileInfo.md), [Uninstall-Module](PowershellGet/Uninstall-Module.md), [Uninstall-Script](PowershellGet/Uninstall-Script.md), [Unregister-PSRepository](PowershellGet/Unregister-PSRepository.md), [Update-Module](PowershellGet/Update-Module.md), [Update-ModuleManifest](PowershellGet/Update-ModuleManifest.md), [Update-Script](PowershellGet/Update-Script.md), [Update-ScriptFileInfo](PowershellGet/Update-ScriptFileInfo.md) |
| [PSScheduledJob](PSScheduledJob/PSScheduledJob.md) | [Add-JobTrigger](PSScheduledJob/Add-JobTrigger.md), [Disable-JobTrigger](PSScheduledJob/Disable-JobTrigger.md), [Disable-ScheduledJob](PSScheduledJob/Disable-ScheduledJob.md), [Enable-JobTrigger](PSScheduledJob/Enable-JobTrigger.md), [Enable-ScheduledJob](PSScheduledJob/Enable-ScheduledJob.md), [Get-JobTrigger](PSScheduledJob/Get-JobTrigger.md), [Get-ScheduledJob](PSScheduledJob/Get-ScheduledJob.md), [Get-ScheduledJobOption](PSScheduledJob/Get-ScheduledJobOption.md), [New-JobTrigger](PSScheduledJob/New-JobTrigger.md), [New-ScheduledJobOption](PSScheduledJob/New-ScheduledJobOption.md), [Register-ScheduledJob](PSScheduledJob/Register-ScheduledJob.md), [Remove-JobTrigger](PSScheduledJob/Remove-JobTrigger.md), [Set-JobTrigger](PSScheduledJob/Set-JobTrigger.md), [Set-ScheduledJob](PSScheduledJob/Set-ScheduledJob.md), [Set-ScheduledJobOption](PSScheduledJob/Set-ScheduledJobOption.md), [Unregister-ScheduledJob](PSScheduledJob/Unregister-ScheduledJob.md) |
| [PSScriptAnalyzer](PSScriptAnalyzer/PSScriptAnalyzer.md) |  |
| [PSWorkflow](PSWorkflow/PSWorkflow.md) | [New-PSWorkflowExecutionOption](PSWorkflow/New-PSWorkflowExecutionOption.md), [New-PSWorkflowSession](PSWorkflow/New-PSWorkflowSession.md) |
| [PSWorkflowUtility](PSWorkflowUtility/PSWorkflowUtility.md) | [Invoke-AsWorkflow](PSWorkflowUtility/Invoke-AsWorkflow.md) |
